@@ -1,6 +1,8 @@
 package com.Neat.Controllers;
 
-import com.Neat.Transformer.BBCGoodFood;
+import com.Neat.Factory.Factory;
+import com.Neat.Factory.Transformer.BBCGoodFood;
+import com.Neat.Factory.Website;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
@@ -11,7 +13,10 @@ import org.springframework.web.bind.annotation.RequestBody;
 
 import java.io.IOException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 @Controller
 public class RecipeController {
@@ -28,16 +33,22 @@ public class RecipeController {
     @PostMapping("/response")
     public String response(@RequestBody String url, ModelMap model, ModelMap model2) throws IOException {
 
-        String url2 = URLDecoder.decode(url, "UTF-8");
+        String url2 = URLDecoder.decode(url, StandardCharsets.UTF_8).replace("url=", "");
 
-        List<String> ingredients = BBCGoodFood.fetchIngregients(url2.replace("url=", ""));
 
-        List<String> method = BBCGoodFood.fetchMethod(url2.replace("url=", ""));
+        int startIndex = url.indexOf("www.") + 4; // 4 is the length of "www."
+        int endIndex = url.indexOf(".co");
+        String subString = url.substring(startIndex, endIndex);
 
-        model.addAttribute("ingredients", ingredients);
+        Website website = Factory.createInstance(subString);
 
-        model2.addAttribute("method", method);
+        if (website != null){
+            List<String> ingredients = website.fetchIngregients(url2);
+            List<String> method = website.fetchMethod(url2);
 
+            model.addAttribute("ingredients", ingredients);
+            model2.addAttribute("method", method);
+        }
         return "response";
     }
 
